test/tests/stages/15_arrays_and_pointer_arithmetic/valid/declarators/array_as_argument.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[6]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: array_param
        List[1]: 
          TIdentifier: a
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 5
              Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: nested_array_param
        List[1]: 
          TIdentifier: a
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 2
              Array: 
                TLong: 3
                Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: array_param
        List[1]: 
          TIdentifier: a
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 2
              Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: nested_array_param
        List[1]: 
          TIdentifier: a
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Array: 
                TLong: 3
                Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[11]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: array_param
                  List[1]: 
                    TIdentifier: a
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[1]: 
                      Array: 
                        TLong: 6
                        Int: 
                    Int: 
                  None: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: nested_array_param
                  List[1]: 
                    TIdentifier: a
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[1]: 
                      Array: 
                        TLong: 5
                        Array: 
    